# internship-tracker

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml  start.bat  stop.bat  开发方案文档.docx  指令.docx  项目需求文档.docx
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  schemas.py
backend/tests/: __init__.py  conftest.py  test_applications.py  test_auth.py  test_integration.py  test_jobs.py  test_main.py  test_resumes.py  test_stats.py
frontend/: Dockerfile  index.html  nginx.conf  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Loading.tsx  Modal.tsx
frontend/src/data/: companies.ts
frontend/src/pages/: CompanyLinks.tsx  Dashboard.tsx  JobCreate.tsx  JobsList.tsx  Login.tsx  Register.tsx
